--- a/index.html
+++ b/index.html
@@ -110,8 +110,11 @@
         <div class="preloader-logo">D</div>
     </div>
 
-    <header class="container my-4 d-flex justify-content-between align-items-center">
-        <h1 class="main-logo-text mb-0">Designerflix</h1>
+   <header class="container my-4 d-flex justify-content-between align-items-center">
+        <h1 class="main-logo-text mb-0">
+            <img src="images/icon-logo.png" alt="Ícone" class="logo-icon">
+            Designerflix
+        </h1>
         <img src="images/logo-edtech.png" alt="Logo Edtech" id="edtech-logo">
     </header>
 
