--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         }
 
         /* 2. Estilos Gerais e do Carrossel */
-        .main-logo-text {
+    .main-logo-text {
+            color: #FFFF00;
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 2px;
+            display: flex;
+            align-items: center;
         }
         .card-img-top {
              aspect-ratio: 2 / 3;
@@ -72,6 +75,11 @@
             height: 60px;
             width: auto;
         }
+        /* Estilo para o novo ícone da logo */
+.logo-icon {
+    height: 2.8rem; /* Tamanho para alinhar com a fonte */
+    margin-right: 12px; /* Espacinho entre o ícone e o texto */
+}
 
         /* 6. ESTILOS DO PRELOADER (ADICIONADO) */
         #preloader {
