--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-color: #4A148C !important; 
         }
         .main-logo-text {
-            color: #FFFF00;
+            color: #ffc629;
         }
         h2 {
             color: #FFFFFF;
@@ -22,7 +22,7 @@
 
         /* 2. Estilos Gerais e do Carrossel */
     .main-logo-text {
-            color: #FFFF00;
+            color: #ffc629;
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 2px;
@@ -96,7 +96,7 @@
             transition: opacity 0.7s ease, visibility 0.7s ease;
         }
         .preloader-logo {
-            color: #FFFF00; /* Amarelo da logo */
+            color: #ffc629; /* Amarelo da logo */
             font-size: 20rem;
             font-weight: 900;
             font-family: 'Arial Black', sans-serif;
