--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         }
         /* Estilo para o novo ícone da logo */
 .logo-icon {
-    height: 2.8rem; /* Tamanho para alinhar com a fonte */
-    margin-right: 12px; /* Espacinho entre o ícone e o texto */
+    height: 2.8rem;
+    margin-left: 12px; /* Espacinho à esquerda */
 }
 
         /* 6. ESTILOS DO PRELOADER (ADICIONADO) */
@@ -118,12 +118,11 @@
         <div class="preloader-logo">D</div>
     </div>
 
- <header class="container my-4 d-flex justify-content-between align-items-center">
-    <img src="images/logo-edtech.png" alt="Logo Edtech" id="edtech-logo">
+<header class="container my-4 d-flex justify-content-between align-items-center">
     <h1 class="main-logo-text mb-0">
-        <img src="images/icon-logo.png" alt="Ícone" class="logo-icon">
-        Designerflix
+        Designerflix <img src="images/icon-logo.png" alt="Ícone" class="logo-icon">
     </h1>
+    <img src="images/logo-edtech.png" alt="Logo Edtech" id="edtech-logo">
 </header>
 
     <main class="container">
