--- a/index.html
+++ b/index.html
@@ -99,10 +99,14 @@
             background-color: #4A148C;
             transition: opacity 0.7s ease, visibility 0.7s ease;
         }
-      .preloader-logo-img {
-    height: 150px; /* Defina a altura que você quer para sua imagem */
-    width: auto;   /* Largura se ajusta para manter a proporção */
-    animation: preloader-thump 1.2s ease-out infinite alternate; /* Mantém a animação de pulso */
+.preloader-logo-img {
+    position: absolute; /* Permite que a imagem seja posicionada independentemente */
+    top: 0;
+    left: 0;
+    width: 100%;      /* Ocupa 100% da largura do pai (#preloader) */
+    height: 100%;     /* Ocupa 100% da altura do pai (#preloader) */
+    object-fit: contain; /* Garante que a imagem inteira caiba na tela sem cortar, mantendo a proporção */
+    animation: preloader-thump 1.2s ease-out infinite alternate; /* Mantém a animação */
 }
         }
         @keyframes preloader-thump { from { transform: scale(1); } to { transform: scale(1.1); } }
