--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         /* 1. Paleta de Cores */
         body.bg-dark {
-            background-color: #4A148C !important; 
+            background-color: #210047 !important; 
         }
         .main-logo-text {
             color: #ffc629;
