--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         /* 6. ESTILOS DO PRELOADER */
         #preloader {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 9999;
-            background-color: #4A148C;
+            background-color: #210047;
             transition: opacity 0.7s ease, visibility 0.7s ease;
         }
 .preloader-logo-img {
