--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             </section>
 
  <section class="mb-5">
-                <h2 class="mb-3">Onde Nascem as Ideias: Nosso Catalogo de Recursos.</h2>
+                <h2 class="mb-3">Onde Nascem as Ideias: Nosso Catálogo de Recursos</h2>
                 <div id="carousel2" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
