--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <h2 class="profile-screen-title">Quem está assistindo?</h2>
         <div class="profile-list">
             <a href="#" id="profile-edtechers" class="profile-card">
-                <img src="images/perfil.png" class="avatar" alt="Edtechers">
+                <img src="images/logoe.png" class="avatar" alt="Edtechers">
                 <p class="profile-name text-center">Edtechers</p>
             </a>
         </div>
