--- a/index.html
+++ b/index.html
@@ -301,6 +301,20 @@
                     <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span></button>
                 </div>
             </section>
+
+ <section class="mb-5">
+                <h2 class="mb-3">Em breve no cátalogo</h2>
+                <div id="carousel2" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
+                            <div class="col"><img src="images/relatorio.png" class="card-img-top" alt="RELATÓRIO DE ATIVIDADES"></div>
+                             <div class="col"><img src="images/coordenadores.png" class="card-img-top" alt="EMAIL COORDENADORES"></div>
+                            </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span></button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span></button>
+                </div>
+            </section>
             
             <section class="mb-5">
                 <h2 class="mb-3">Expiram em breve</h2>
