--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
+                                 <div class="col"><a href="https://projeto-relatorios-flask.onrender.com" target="_blank"><img src="images/lrelatorio.png" class="card-img-top" alt="RELATÓRIO DE ATIVIDADES"></a></div>
                                 <div class="col"><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank"><img src="images/1descricao.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
                                 <div class="col"><a href="https://www.perplexity.ai/collections/formatacao-de-formulas-CyFZHBSwQiCgjt4vt6YTVg" target="_blank"><img src="images/1formulas.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
                                 <div class="col"><a href="https://www.perplexity.ai/collections/minhas-metas-KTFH54OjRRG4E5rEjzCGIg" target="_blank"><img src="images/1metas.png" class="card-img-top" alt="Minhas Metas"></a></div>
