--- a/index.html
+++ b/index.html
@@ -106,30 +106,30 @@
     <div id="side-menu" class="side-menu">
         <ul>
             <li><h3>Adicionados recentemente</h3></li>
-            <li><a href="https://projeto-relatorios-flask.onrender.com" target="_blank">RELATÓRIO DE ATIVIDADES</a></li>
-            <li><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank">DESCRIÇÃO DE IMAGEM</a></li>
-            <li><a href="https://www.perplexity.ai/collections/formatacao-de-formulas-CyFZHBSwQiCgjt4vt6YTVg" target="_blank">Formatação de fórmulas</a></li>
+            <li><a href="https://projeto-relatorios-flask.onrender.com" target="_blank">Relatório de Atividades</a></li>
+            <li><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank">Descrição de Imagens</a></li>
+            <li><a href="https://www.perplexity.ai/collections/formatacao-de-formulas-CyFZHBSwQiCgjt4vt6YTVg" target="_blank">Formatação de Fórmulas</a></li>
             <li><a href="https://www.perplexity.ai/collections/minhas-metas-KTFH54OjRRG4E5rEjzCGIg" target="_blank">Minhas Metas</a></li>
             <li><a href="https://www.perplexity.ai/collections/inicie-sua-jornada-2u7pYJ.tRc6iYAl52pOrgw" target="_blank">Inicie sua Jornada</a></li>
             <li><a href="https://www.perplexity.ai/collections/descricao-de-partitura-musical-GAHc5NxORgaSa6A6rpP8bg" target="_blank">Descrição de Partituras</a></li>
             <li><a href="https://www.perplexity.ai/collections/novos-desafios-02_KGT5mQA.u8jwbmtFeDw" target="_blank">Novos Desafios</a></li>
 
             <li><h3>Mapa da Mina: Manuais para o Design Educacional</h3></li>
-            <li><a href="https://sites.google.com/unicesumar.com.br/recursos-interativos/in%C3%ADcio" target="_blank">Recursos Interativos</a></li>
+            <li><a href="https://sites.google.com/unicesumar.com.br/recursos-interativos/in%C3%ADcio" target="_blank">Novos Desafios</a></li>
             <li><a href="https://vitru-digital.web.app/explora-recursos/" target="_blank">Explora Recursos</a></li>
-            <li><a href="https://sites.google.com/unicesumar.com.br/guia-de-ferramentas-ia/in%C3%ADcio" target="_blank">Guia de Ferramentas DE's</a></li>
+            <li><a href="https://sites.google.com/unicesumar.com.br/guia-de-ferramentas-ia/in%C3%ADcio" target="_blank">Guia de Ferramentas DE</a></li>
             <li><a href="https://app.powerbi.com/view?r=eyJrIjoiZGYxZTQ3ZWQtZjUyMS00N2I1LTgyMGItZDEwZWFiODQyYzc4IiwidCI6ImIwZTczMzVmLWZkMWYtNDZhZC05OGM3LTU1ZTZlNGUyMjJlYSJ9&disablecdnExpiration=1745381102" target="_blank">Acervo Vitru</a></li>
-            <li><a href="https://livrodigital.uniasselvi.com.br/disciplina/manual_de/guia/inicio.html" target="_blank">Manual de Marca</a></li>
-            <li><a href="https://sites.google.com/unicesumar.com.br/referencialescrita-wl/guia-de-escrita" target="_blank">Referencial de Escrita</a></li>
-            <li><a href="https://sites.google.com/unicesumar.com.br/organizador/metodologia-institucional?authuser=0" target="_blank">Metodologia Institucional</a></li>
-            <li><a href="https://sites.google.com/unicesumar.com.br/referencialdeescritapos/guia-de-escrita" target="_blank">Referencial de Escrita (Pós)</a></li>
+            <li><a href="https://livrodigital.uniasselvi.com.br/disciplina/manual_de/guia/inicio.html" target="_blank">Manual do DE</a></li>
+            <li><a href="https://sites.google.com/unicesumar.com.br/referencialescrita-wl/guia-de-escrita" target="_blank">Referencial de Escrita WL</a></li>
+            <li><a href="https://sites.google.com/unicesumar.com.br/organizador/metodologia-institucional?authuser=0" target="_blank">Referencial de Escrita CS</a></li>
+            <li><a href="https://sites.google.com/unicesumar.com.br/referencialdeescritapos/guia-de-escrita" target="_blank">Referencial de Escrita Pós</a></li>
 
             <li><h3>Assista Novamente</h3></li>
-            <li><a href="https://drive.google.com/file/d/1XTiINiU26h5OYo3xkaSYcQKLmi1hIeCp/view?usp=drive_link" target="_blank">Orientações de Acessibilidade</a></li>
-            <li><a href="https://drive.google.com/file/d/1XXgjMgWrcClkLwnuZiu2YkmNWFj1l_f8/view?usp=drive_link" target="_blank">Congresso CIAED</a></li>
-            <li><a href="https://drive.google.com/file/d/1ACb7LvwFrrXzmK6s2jw3bnUEE3tcf9_w/view?usp=drive_link" target="_blank">Design Thinking</a></li>
-            <li><a href="https://drive.google.com/file/d/1WhTHL2-oC95G_pSyaTFXlm3K0BzQWxc1/view?usp=drive_link" target="_blank">Checklist de Verificação</a></li>
-            <li><a href="https://design-educacionalvtr.github.io/recursos-IA/" target="_blank">Repositório de Recursos IA</a></li>
+            <li><a href="https://drive.google.com/file/d/1XTiINiU26h5OYo3xkaSYcQKLmi1hIeCp/view?usp=drive_link" target="_blank">Orientações Gerais</a></li>
+            <li><a href="https://drive.google.com/file/d/1XXgjMgWrcClkLwnuZiu2YkmNWFj1l_f8/view?usp=drive_link" target="_blank">Experiência no CIAED</a></li>
+            <li><a href="https://drive.google.com/file/d/1ACb7LvwFrrXzmK6s2jw3bnUEE3tcf9_w/view?usp=drive_link" target="_blank">Design Educacional</a></li>
+            <li><a href="https://drive.google.com/file/d/1WhTHL2-oC95G_pSyaTFXlm3K0BzQWxc1/view?usp=drive_link" target="_blank">Checklist</a></li>
+            <li><a href="https://design-educacionalvtr.github.io/recursos-IA/" target="_blank">Projetos Desenvolvidos</a></li>
             
             <li><h3>Onde Nascem as Ideias: Nosso Catálogo de Recursos.</h3></li>
             <li><a href="https://www.perplexity.ai/collections/dialogo-uM3OMFgwRRWj5Me7VGcVtg" target="_blank">Dialogo</a></li>
@@ -138,9 +138,6 @@
             <li><a href="https://www.perplexity.ai/collections/cards-iw4HjAiIRhK7JWMNpHHJ0g" target="_blank">Cards</a></li>
             <li><a href="https://www.perplexity.ai/collections/arrasta-e-solta-uYj4ImCiTE6moOEFA_I3Ng" target="_blank">Arrasta e Solta</a></li>
             <li><a href="https://www.perplexity.ai/collections/tabuleiro-_1CiebUMRia1CXvcdXwC.A" target="_blank">Tabuleiro</a></li>
-
-            <li><h3>Em breve no cátalogo</h3></li>
-            <li><h3>Expiram em breve</h3></li>
             </ul>
     </div>
 
@@ -357,4 +354,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
