--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     
         <div class="news-ticker-container fixed-bottom bg-black p-2 border-top border-danger">
             <div class="news-ticker">
-                 <p>Seja bem-vindo ao DesignerFlix! • Encerramento de módulos: 2026/1: 18 de agosto - 51/2026: 15 de setembro - 52/2026: 17 de novembro •• Prazo final para a entrega do relatório de julho: 05 de agosto.</p>
+                 <p>Seja bem-vindo ao DesignerFlix! • Encerramento de módulos: 2026/1: 18 de agosto - 51/2026: 15 de setembro - 52/2026: 17 de novembro •• Prazo final para a entrega do relatório de agosto: 05 de setembro.</p>
             </div>
         </div>
         
@@ -354,5 +354,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
