--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <div id="side-menu" class="side-menu">
         <ul>
             <li><h3>Adicionados recentemente</h3></li>
+            <li><a href="https://drive.google.com/file/d/1nXeFgS8T0yyGbG1Gd7IaeZO4VcZAVG6s/view?usp=sharing" target="_blank">Quando Acionar o Recrutamento?</a></li>
             <li><a href="https://projeto-relatorios-flask.onrender.com" target="_blank">Relatório de Atividades</a></li>
             <li><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank">Descrição de Imagens</a></li>
             <li><a href="https://www.perplexity.ai/collections/formatacao-de-formulas-CyFZHBSwQiCgjt4vt6YTVg" target="_blank">Formatação de Fórmulas</a></li>
@@ -175,15 +176,16 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
+                                <div class="col"><a href="https://drive.google.com/file/d/1nXeFgS8T0yyGbG1Gd7IaeZO4VcZAVG6s/view?usp=sharing" target="_blank"><img src="images/Irecrut.png" class="card-img-top" alt="Quando acionar o Recrutamento?"></a></div>
                                 <div class="col"><a href="https://projeto-relatorios-flask.onrender.com" target="_blank"><img src="images/lrelatorio.png" class="card-img-top" alt="RELATÓRIO DE ATIVIDADES"></a></div>
                                 <div class="col"><a href="https://www.perplexity.ai/collections/descricao-da-imagem-jbyWzxcpQdqqWqRYCclwPg" target="_blank"><img src="images/1descricao.png" class="card-img-top" alt="DESCRIÇÃO DE IMAGEM"></a></div>
                                 <div class="col"><a href="https://www.perplexity.ai/collections/formatacao-de-formulas-CyFZHBSwQiCgjt4vt6YTVg" target="_blank"><img src="images/1formulas.png" class="card-img-top" alt="Formatação de fórmulas"></a></div>
                                 <div class="col"><a href="https://www.perplexity.ai/collections/minhas-metas-KTFH54OjRRG4E5rEjzCGIg" target="_blank"><img src="images/1metas.png" class="card-img-top" alt="Minhas Metas"></a></div>
-                                <div class="col"><a href="https://www.perplexity.ai/collections/inicie-sua-jornada-2u7pYJ.tRc6iYAl52pOrgw" target="_blank"><img src="images/1jornada.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
+                                <div class="col"><a href="https://www.perplexity.ai/collections/inicie-sua-jornada-2u7pYJ.tRc6iYAl52pOrgw" target="_blank"><img src="images/1jornada.png" class="card-img-top" alt="Inicie sua Jornada"></a></div>
                                 <div class="col"><a href="https://www.perplexity.ai/collections/descricao-de-partitura-musical-GAHc5NxORgaSa6A6rpP8bg" target="_blank"><img src="images/1partituras.png" class="card-img-top" alt="Descrição de Partituras"></a></div>
                                <div class="col"><a href="https://www.perplexity.ai/collections/novos-desafios-02_KGT5mQA.u8jwbmtFeDw" target="_blank"><img src="images/1desafios.png" class="card-img-top" alt="Novos Desafios"></a></div>
                             </div>
@@ -354,6 +356,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
