--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                                <div class="col"><img src="images/2026-1.png" class="card-img-top" alt="Módulo 2026/1"></div>
+                                <div class="col"><img src="ferias.png" class="card-img-top" alt="Férias"></div>
                                 <div class="col"><img src="images/51-2026.png" class="card-img-top" alt="Módulo 51/2026"></div>
                                 <div class="col"><img src="images/52-2026.png" class="card-img-top" alt="Módulo 52/2026"></div>
                             </div>
@@ -358,6 +358,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
