--- a/index.html
+++ b/index.html
@@ -13,8 +13,33 @@
         #profile-screen { display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; text-align: center; }
         #preloader, #main-content { display: none; }
 
-        /* 1. Paleta de Cores */
-        body.bg-dark { background-color: #210047 !important; }
+       /* 1. Paleta de Cores e Fundo */
+body.bg-dark {
+    background-color: #210047 !important; /* Cor de fallback */
+    background-image: url('images/fundo-confraternizacao.png'); /* Sua imagem de fundo AQUI */
+    background-size: cover;          /* Cobre a tela */
+    background-attachment: fixed;      /* Fica fixa */
+    background-position: center center; /* Centraliza */
+    background-repeat: no-repeat;     /* Não repete */
+    position: relative; /* Necessário para o overlay */
+    z-index: 0;         /* Coloca o body na camada base */
+}
+        /* Overlay semi-transparente sobre o fundo */
+body.bg-dark::before {
+    content: ''; /* Essencial para pseudo-elementos */
+    position: absolute; /* Posiciona em relação ao body */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 0, 71, 0.75); /* Roxo #210047 com 75% de opacidade */
+    z-index: 1; /* Fica acima do body (z-index: 0) */
+}
+        /* Garante que o conteúdo principal fique acima do overlay */
+#main-content, header, #side-menu {
+    position: relative;
+    z-index: 2; 
+}
         .main-logo-text { color: #ffc629; }
         h2 { color: #FFFFFF; }
 
@@ -309,7 +334,7 @@
     
         <div class="news-ticker-container fixed-bottom bg-black p-2 border-top border-danger">
             <div class="news-ticker">
-                 <p>Seja bem-vindo ao DesignerFlix! • Encerramento de módulos: 51/2026: 15 de setembro - 52/2026: 17 de novembro •• Prazo final para a entrega do relatório de setembro: 03 de outubro.</p>
+                 <p>Seja bem-vindo ao DesignerFlix! • Encerramento de módulos: 52/2026: 17 de novembro •• Prazo final para a entrega do relatório de outubro: 06 de novembro.</p>
             </div>
         </div>
         
@@ -358,6 +383,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
