--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
        /* 1. Paleta de Cores e Fundo */
 body.bg-dark {
     background-color: #210047 !important; /* Cor de fallback */
-    background-image: url('images/fundo-confraternizacao.png'); /* Sua imagem de fundo AQUI */
+    background-image: url('images/fundo-confraternizacao.png'); /* Sua imagem de fundo */
     background-size: cover;          /* Cobre a tela */
     background-attachment: fixed;      /* Fica fixa */
     background-position: center center; /* Centraliza */
     background-repeat: no-repeat;     /* Não repete */
-    position: relative; /* Necessário para o overlay */
-    z-index: 0;         /* Coloca o body na camada base */
+    position: relative; /* Mantém como referência */
+    /* REMOVEMOS o z-index daqui */
 }
-        /* Overlay semi-transparente sobre o fundo */
+/* Overlay semi-transparente SOBRE o fundo, mas ATRÁS do conteúdo */
 body.bg-dark::before {
-    content: ''; /* Essencial para pseudo-elementos */
-    position: absolute; /* Posiciona em relação ao body */
+    content: ''; 
+    position: fixed; /* FIXO na tela, cobre tudo */
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(33, 0, 71, 0.75); /* Roxo #210047 com 75% de opacidade */
-    z-index: 1; /* Fica acima do body (z-index: 0) */
+    width: 100vw; /* Largura total da viewport */
+    height: 100vh; /* Altura total da viewport */
+    background-color: rgba(33, 0, 71, 0.75); /* Roxo #210047 com 75% opacidade */
+    z-index: -1; /* Joga para TRÁS de todo o conteúdo */
 }
         /* Garante que o conteúdo principal fique acima do overlay */
 #main-content, header, #side-menu {
@@ -383,6 +383,7 @@ body.bg-dark::before {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
