--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ body.bg-dark {
     
         <div class="news-ticker-container fixed-bottom bg-black p-2 border-top border-danger">
             <div class="news-ticker">
-                 <p>Seja bem-vindo ao DesignerFlix! • Encerramento de módulos: 52/2026: 17 de novembro •• Prazo final para a entrega do relatório de outubro: 06 de novembro.</p>
+                 <p>Seja bem-vindo ao DesignerFlix! • Encerramento de módulos: 52/2026: 17 de novembro • 2026/2: 13 de fevereiro • 53/26: 06 de abril • 54/26: 19 de junho • Prazo final para a entrega do relatório de outubro: 06 de novembro.</p>
             </div>
         </div>
         
@@ -359,6 +359,7 @@ body.bg-dark {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
