--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@ body.bg-dark {
                         <div class="carousel-item active">
                             <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
                                 <div class="col"><img src="images/ferias.png" class="card-img-top" alt="Férias"></div>
-                                <div class="col"><img src="images/51-2026.png" class="card-img-top" alt="Módulo 51/2026"></div>
-                                <div class="col"><img src="images/52-2026.png" class="card-img-top" alt="Módulo 52/2026"></div>
+                                <div class="col"><img src="natal 1.png" class="card-img-top" alt="Relatório Novembro"></div>
+                                <div class="col"><img src="natal 2.png" class="card-img-top" alt="Relatório Dezembro"></div>
                             </div>
                         </div>
                     </div>
@@ -310,7 +310,7 @@ body.bg-dark {
     
         <div class="news-ticker-container fixed-bottom bg-black p-2 border-top border-danger">
             <div class="news-ticker">
-                 <p>Seja bem-vindo ao DesignerFlix! • Encerramento de módulos: 52/2026: 17 de novembro • 2026/2: 13 de fevereiro • 53/26: 06 de abril • 54/26: 19 de junho • Prazo final para a entrega do relatório de outubro: 06 de novembro.</p>
+                 <p>Seja bem-vindo ao DesignerFlix! • Férias: 15/12/2025 até 03/01/2026 • Prazo final para a entrega do relatório de novembro: 05 de dezembro • Relatório de dezembro: 12 de dezembro.</p>
             </div>
         </div>
         
@@ -359,6 +359,7 @@ body.bg-dark {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
