--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@ body.bg-dark {
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                                <div class="col"><img src="images/2026/2.png" class="card-img-top" alt="MÓDULO 2026/2"></div>
-                                <div class="col"><img src="images/53/26.png" class="card-img-top" alt="MÓDULO 53/26"></div>
-                                <div class="col"><img src="images/54/26.png" class="card-img-top" alt="MÓDULO 54/26"></div>
+                                <div class="col"><img src="images/2026-2.png" class="card-img-top" alt="MÓDULO 2026/2"></div>
+                                <div class="col"><img src="images/53-26.png" class="card-img-top" alt="MÓDULO 53/26"></div>
+                                <div class="col"><img src="images/54-26.png" class="card-img-top" alt="MÓDULO 54/26"></div>
                             </div>
                         </div>
                     </div>
@@ -359,6 +359,7 @@ body.bg-dark {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
