--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@ body.bg-dark {
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
-                                <div class="col"><img src="images/relatorio.png" class="card-img-top" alt="RELATÓRIO DE ATIVIDADES"></div>
-                                <div class="col"><img src="images/coordenadores.png" class="card-img-top" alt="EMAIL COORDENADORES"></div>
+                                <div class="col"><img src="images/modulo.png" class="card-img-top" alt="MÓDULOS"></div>
+                                <div class="col"><img src="images/coord.png" class="card-img-top" alt="EMAIL COORDENADORES"></div>
                             </div>
                         </div>
                     </div>
@@ -359,6 +359,7 @@ body.bg-dark {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
