--- a/index.html
+++ b/index.html
@@ -224,7 +224,23 @@ body.bg-dark {
                     <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span></button>
                 </div>
             </section>
-        
+
+<section class="mb-5">
+                <h2 class="mb-3">Para o alto e avante: Pós-Graduação 4.0</h2>
+                <div id="carousel3" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
+                                <div class="col"><a href="https://drive.google.com/file/d/1wFPi2jOpCZQUmbwX6ph2LJkh1oymkH8p/view?usp=drive_link" target="_blank"><img src="images/treinamentope.png" class="card-img-top" alt="Oficina Plano de Ensino"></a></div>
+                                <div class="col"><a href="" target="_blank"><img src="images/guia40.png" class="card-img-top" alt="Guia 4.0"></a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span></button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span></button>
+                </div>
+            </section>
+            
             <section class="mb-5">
                 <h2 class="mb-3">Assista Novamente</h2>
                 <div id="carousel4" class="carousel slide">
@@ -359,6 +375,7 @@ body.bg-dark {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
