--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ body.bg-dark {
                         <div class="carousel-item active">
                             <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
                                 <div class="col"><a href="https://drive.google.com/file/d/1wFPi2jOpCZQUmbwX6ph2LJkh1oymkH8p/view?usp=drive_link" target="_blank"><img src="images/treinamentope.png" class="card-img-top" alt="Oficina Plano de Ensino"></a></div>
-                                <div class="col"><a href="" target="_blank"><img src="images/guia40.png" class="card-img-top" alt="Guia 4.0"></a></div>
+                                <div class="col"><img src="images/guia40.png" class="card-img-top" alt="Guia 4.0"></div>
                             </div>
                         </div>
                     </div>
@@ -375,6 +375,7 @@ body.bg-dark {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
