--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@ body.bg-dark {
                         <div class="carousel-item active">
                             <div class="row row-cols-lg-5 row-cols-md-4 row-cols-sm-3 row-cols-2 g-3">
                                 <div class="col"><a href="https://drive.google.com/file/d/1wFPi2jOpCZQUmbwX6ph2LJkh1oymkH8p/view?usp=drive_link" target="_blank"><img src="images/treinamentope.png" class="card-img-top" alt="Oficina Plano de Ensino"></a></div>
+                                <div class="col"><a href="https://drive.google.com/file/d/1o-SVWLXoL5gab3HBkFC2iTH1oib4g8Ie/view?usp=drive_link" target="_blank"><img src="images/captrilha.png" class="card-img-top" alt="Capacitação Plano de Ensino + Trilha"></a></div>
+                                <div class="col"><a href="https://drive.google.com/file/d/1ytCh7e3YRAfSSEKAxuX-zTAdQgs2QTJ1/view?usp=drive_link" target="_blank"><img src="images/geraestudo.png" class="card-img-top" alt="Geração de Conteúdo + Estudo de Caso"></a></div>
                                 <div class="col"><img src="images/guia40.png" class="card-img-top" alt="Guia 4.0"></div>
                             </div>
                         </div>
@@ -375,6 +377,7 @@ body.bg-dark {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
